--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,17 @@ small {
   margin: 0 auto;
   display: block;
 }
+
+@media screen and (max-width: 768px) {
+  .label{
+    text-align: center;
+    margin-bottom: 5%;
+  }
+  .input{
+    margin-bottom: 5%;
+  }
+  .button{
+    width: 70vw;
+    margin-left: 5%;
+  }
+}
